sfdx-source/force-app/main/default/objects/Recommendation_Store__x/Recommendation_Store__x.object-meta.xml
<CustomObject>
    <description>LEM-13429: It visualizes recommendation record details from vsp_prediction table.</description>
    <externalDataSource>Figment_Data_Connector</externalDataSource>
    <externalName>public$vsp_predictions_by_store</externalName>
    <label>Store Recommendation</label>
    <pluralLabel>Store Recommendations</pluralLabel>
</CustomObject>