sfdx-source/force-app/main/default/objects/Recommendation_Store__x/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13429: It stores a reference to Business Account records.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>business_account_id</externalDeveloperName>
    <label>Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>VSP_Recommendations_on_Store</relationshipName>
    <type>Lookup</type>
</CustomField>