sfdx-source/force-app/main/default/objects/Recommendation_Store__x/fields/incremental_sales__c.field-meta.xml
<CustomField>
    <fullName>incremental_sales__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13429: It display the sum of the Predicted Incremental Sales Uplift in $ of all the stores directly under the Business Account to which the VSP Recommendation applies.</description>
    <externalDeveloperName>incremental_sales</externalDeveloperName>
    <label>Predicted Incremental Sales Uplift $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>