sfdx-source/force-app/main/default/objects/Recommendation_Store__x/fields/points__c.field-meta.xml
<CustomField>
    <fullName>points__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13429: It displays the sum of the points of all the stores directly under the Business Account to which the VSP Recommendation applies.</description>
    <externalDeveloperName>decile</externalDeveloperName>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>