sfdx-source/force-app/main/default/objects/Recommendation_Store__x/fields/pred_sales_n90d__c.field-meta.xml
<CustomField>
    <fullName>pred_sales_n90d__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16067: It displays the Predicted Sales for 90 days of all the stores to which the VSP Recommendation applies.</description>
    <externalDeveloperName>pred_sales_n90d</externalDeveloperName>
    <label>Predicted n90 days $ Sales</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>