sfdx-source/force-app/main/default/objects/Recommendation_Store__x/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <externalDeveloperName>rank</externalDeveloperName>
    <label>Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>