sfdx-source/force-app/main/default/objects/Recommendation_Store__x/fields/Store_Account__c.field-meta.xml
<CustomField>
    <fullName>Store_Account__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13429: It stores a reference to a Store Account record.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>store_account_id</externalDeveloperName>
    <label>Store Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Store_VSP_Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>